--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>foodPantry</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <script src="https://checkout.stripe.com/checkout.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
